# InformationEngineering_assignments

./: 02-basics-final-assignment.cpp  03-conditionals-assignment.cpp  03-conditionals-homework.cpp  04-arrays-homework.cpp  05-functions-homework.cpp  06-pointers-homework.cpp  07-containers-homework.cpp  README.md  Sem2-01-classes-intro.cpp  Sem2-sample-test-01.cpp  Sem2-sample-test-02.cpp  main.cpp  sample-test-01.cpp
08-structures-homework/: Athlete.cpp  Athlete.h  homework-structures.pro  main.cpp
10-files-homework/: CMakeLists.txt  main.cpp  new.txt  students.txt
Sem2-02-operators-assignment/: CMakeLists.txt  header.h  main.cpp  operators.cpp
Sem2-02-operators-homework/: CMakeLists.txt  header.h  main.cpp  operators.cpp
Sem2-03-SFML_intro-homework/: main.cpp  sfml-test.pro
Sem2-04-SFML_inheritance-homework/: main.cpp
sample-test-02/: grades.txt  marks.txt  students_grades.txt
sample-test-03/: header.h  main.cpp  source-test3.cpp
